--- a/src/main/webapp/WEB-INF/views/delete.html
+++ b/src/main/webapp/WEB-INF/views/delete.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head th:replace="layout :: head">
     <meta charset="UTF-8">
     <title>Delete</title>
 </head>
 <body>
-<h3>Delete</h3>
+<h3>Delete motorbike</h3>
+<p>
+    <button>
+        <a th:href="@{/motorbikes}">Back to list</a>
+    </button>
+</p>
+
 <form th:action="@{/motorbikes/delete}" th:object="${motorbike}" method="post">
     <input type="hidden" th:field="*{id}"/>
-    <input type="submit" value="Delete"/>
+    <table>
+        <tr>
+            <td>Name:</td>
+            <td th:text="*{name}"></td>
+        </tr>
+        <tr>
+            <td>Sold Number:</td>
+            <td th:text="*{soldNumber}"></td>
+        </tr>
+        <tr>
+            <td>Description:</td>
+            <td th:text="*{description}"></td>
+        </tr>
+    </table>
+    <input type="submit" value=""/>
 </form>
-
+<footer th:replace="layout :: footer"></footer>
 </body>
 </html>
