--- a/src/main/webapp/WEB-INF/views/information.html
+++ b/src/main/webapp/WEB-INF/views/information.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head th:replace="layout :: head">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+<h3>Information</h3>
+<p>
+    <button>
+        <a th:href="@{/motorbikes}">Back to list</a>
+    </button>
+</p>
+<form th:action="@{/motorbikes/information}" th:object="${motorbike}" method="post">
+    <input type="hidden" th:field="*{id}"/>
+    <table>
+        <tr>
+            <td>Name:</td>
+            <td th:text="*{name}"></td>
+        </tr>
+        <tr>
+            <td>Sold Number:</td>
+            <td th:text="*{soldNumber}"></td>
+        </tr>
+        <tr>
+            <td>Description:</td>
+            <td th:text="*{description}"></td>
+        </tr>
+    </table>
+</form>
+<footer th:replace="layout :: footer"></footer>
 </body>
 </html>
